changes made to site

--- a/Coeus template/index-9.html
+++ b/Coeus template/index-9.html
@@ -197,25 +197,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="section padding-top-big">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<ul class="logo-wrap">
-							<li><img src="img/logos/1-light.png" alt=""></li>
-							<li><img src="img/logos/2-light.png" alt=""></li>
-							<li><img src="img/logos/3-light.png" alt=""></li>
-							<li><img src="img/logos/4-light.png" alt=""></li>
-							<li><img src="img/logos/5-light.png" alt=""></li>
-							<li><img src="img/logos/6-light.png" alt=""></li>
-							<li><img src="img/logos/7-light.png" alt=""></li>
-							<li><img src="img/logos/8-light.png" alt=""></li>
-							<li><img src="img/logos/9-light.png" alt=""></li>
-						</ul>
-					</div>
-				</div>	
-			</div>
-		</div>
 	</div> 
 
 	<div class="section padding-top-big background-gradient-light-re" id="concept">
@@ -288,7 +269,8 @@
 						<a class="btn btn-primary mt-4 mx-0 js-tilt" href="#buy" data-gal="m_PageScroll2id" data-ps2id-offset="120" role="button" data-tilt-perspective="300" data-tilt-speed="700" data-tilt-max="24"><span>Buy Tokens</span></a>
 					</div>
 				</div>	
-			</div>	
+			</div>
+				
 		</div>	
 	</div>
 
@@ -371,20 +353,6 @@
 								<p class="text-grey">Partnership For Future</p>
 							</div>	
 						</div>							
-					</div>
-				</div>
-				<div class="col-md-12 padding-top">
-					<div class="title-wrap text-center">
-						<h5 class="text-white">How it works:</h5>
-					</div>
-				</div>
-				<div class="col-md-8 offset-md-2" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.3s">
-					<div class="video-section video-shadow">
-						<figure class="vimeo"> 
-							<a href="https://player.vimeo.com/video/239566739">
-								<img src="img/video-blue.jpg" alt="image"/>
-							</a>
-						</figure>
 					</div>
 				</div>
 			</div>	
@@ -1102,7 +1070,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 footer text-center text-lg-left">
-						<p>Copyright © 2018, DISC. Template made by <a href="https://themeforest.net/user/ig_design/portfolio?ref=IG_design">IG Design</a></p>
+						<p>Copyright © 2018, DISC.</p>
 					</div>
 					<div class="col-lg-6 footer mt-4 mr-auto mt-lg-0 mr-lg-0 text-center text-lg-right">
 						<a class="app-btn mx-2 mr-lg-3" href="#"><i class="fa fa-twitter"></i></a>
